fix(web-components): updated content aligned behaviour on top navigation
Removed styling which re-positioned content when content-aligned was set on top navigation. This has
been replaced by updating the position of the section container only

--- a/packages/web-components/src/components/ic-section-container/ic-section-container.css
+++ b/packages/web-components/src/components/ic-section-container/ic-section-container.css
@@ -39,6 +39,7 @@
   display: block;
   padding-top: var(--ic-space-md);
   padding-bottom: var(--ic-space-md);
+  box-sizing: border-box;
 }
 
 :host(.aligned-center) {
